IDP-1887 - Repurpose authn flow for alternative uses
https://shibboleth.atlassian.net/browse/IDP-1887